Optimize video list parsing and code
add the function of parsing video lists from web pages first and optimize some code organization

--- a/assets/config.json
+++ b/assets/config.json
@@ -23,5 +23,6 @@
         "index":"23"
       }
     },
-    "key":"25tids8f1ew1821ed"
+    "key":"25tids8f1ew1821ed",
+    "chapterResult":"//*[@id=\"player_code\"]/li"
   }
