--- a/assets/config.json
+++ b/assets/config.json
@@ -1,6 +1,6 @@
 {
     "name":"tucao",
-    "domain":"www.tucao.cfd",
+    "domain":"www.tucao.buzz",
     "protocol":"https",
     "proxy":"",
     "channels":{
